--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -5,12 +5,27 @@
         {% for p in pst %}
         <div class="col-md-6">
             <div class="img-thumbnail">
-                <a href="{% url 'posts:post_detail' p.id p.slug %}">{{p.title}}</a><small style="float:right">{{p.created}}</small><br>
+                <a href="{% url 'posts:post_detail' p.id %}">{{p.title}}</a><small style="float:right">{{p.created}}</small>
+                            <!-- {{total_likes}} Like{{total_likes|pluralize}} -->
+
+                            {% if request.user.is_authenticated %}
+
+                            <form action="{% url 'posts:like_post' p.id %}" method="post">
+                                {% csrf_token %}
+                                {% if is_liked %}
+                                <button type="submit" name="psts_id" value="{{p.id}}" class="btn btn-danger">Dislike</button>
+                                {% else %}
+                                <button type="submit" name="psts_id" value="{{p.id}}" class="btn btn-primary">Like</button>
+                                {% endif %}
+                            </form>
+                            {% endif %}<br>
                 Author: {{p.author}} <br>
                 {{p.body}}
            </div>
             <br>
         </div>
         {% endfor %}
+
+
 </div>
 {% endblock %}
