--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -6,6 +6,8 @@
 <title>{% block title %}ScrapShut Project!{% endblock %}</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'posts/style.css' %}">
+<link rel="stylesheet" href="{% static 'posts/postlist.css' %}">
+
 </head>
 <body>
 {% include 'posts/navbar.html' %}
