added view count

--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -7,6 +7,11 @@
     <p>{{psts.body}}</p>
 <br><br>
 <hr>
+ 
+     <p <i class="far fa-eye mr-2"></i> {{psts.view_count}}  Views
+                </p>
+                <hr/>
+
 
 
 <div class="main-comment-section">
