--- a/templates/posts/navbar.html
+++ b/templates/posts/navbar.html
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+{% load static %}
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="{% url 'posts:post_list' %}"> Project</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -30,5 +32,100 @@
       {% endif %}
       </ul>
 
+  </div>
+</nav> -->
+
+<!-- ######### -->
+
+<!--
+<nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container">
+        <div class="navbar-translate">
+            <a class="navbar-brand" href="/presentation.html">scrapshut</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a href="#pablo" class="nav-link">link</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#pablo" class="nav-link">link</a>
+                </li>
+            </ul> -->
+
+
+
+
+            <!-- <form class="form-inline ml-auto">
+                <div class="form-group no-border">
+                  <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-white btn-just-icon btn-round">
+                    <i class="material-icons">search</i>
+                </button>
+            </form> -->
+              <!-- <form class="form-inline ml-auto">
+                  <input class="form-control" type="search" placeholder="Search" aria-label="Search" name='q'>
+                  <button class="btn btn-white btn-just-icon btn-round" type="submit">Search</button>
+                </form>
+        </div>
+        <li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Dropdown link
+</a>
+<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+<a class="dropdown-item" href="#">Action</a>
+<a class="dropdown-item" href="#">Another action</a>
+<a class="dropdown-item" href="#">Something else here</a>
+</div>
+</li>
+    </div>
+</nav> -->
+
+
+
+<nav class="navbar navbar-expand-lg bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="sr-only">Toggle navigation</span>
+    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span>Hey {{ request.user|capfirst }}</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Logout</a>
+            <a class="dropdown-item" href="{% url 'posts:post_create' %}">Create Post</a>
+            <a class="dropdown-item" href="{% url 'accounts:profile' request.user %}">Logout</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <form class="form-inline ml-auto">
+        <input class="form-control" type="search" placeholder="Search" aria-label="Search" name='q'>
+        <button class="btn btn-white btn-just-icon btn-round" type="submit">Search</button>
+      </form>
   </div>
 </nav>
