--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@ rey
 	<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="{% static "css/style.css" %}">
+	<link rel="stylesheet" href="{% static 'accounts/css/profile.css' %}">
+
 	{% block stylesheet %}
 
 	{% endblock stylesheet %}
