--- a/templates/posts/post_create.html
+++ b/templates/posts/post_create.html
@@ -2,7 +2,7 @@
 {% block content %}
 <form method="post">
     {% csrf_token %}
-    {{form.as_p}}
+    {{form.body}}
     <input type="submit" value="Create" class="btn btn-outline-success">
 </form>
 {% endblock %}
