--- a/templates/posts/navbar.html
+++ b/templates/posts/navbar.html
@@ -1,142 +1,83 @@
-{% load static %}
-<!-- Stylesheets
-<link rel="stylesheet" href="{% static 'posts/style.css' %}">
-
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'posts:post_list' %}"> Project</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-
-        <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name='q'>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    </ul>
-      <ul class="navbar-nav>
-      {% if request.user.is_authenticated %}
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span>Hey {{ request.user|capfirst }}</span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Logout</a>
-          <a class="dropdown-item" href="{% url 'posts:post_create' %}">Create Post</a>
-        </div>
-      </li>
-      {% else %}
-      <li class="nav-item">
-        <a href="{% url 'accounts:user_login' %}" class="nav-link">Login</a>
-      </li>
-      {% endif %}
-      </ul>
-
-  </div>
-</nav>
-
-<!-- ######### -->
-
-<!--
-<nav class="navbar navbar-expand-lg bg-dark">
+<header id="header">
+  <nav class="navbar navbar-default navbar-fixed-top menu">
     <div class="container">
-        <div class="navbar-translate">
-            <a class="navbar-brand" href="/presentation.html">scrapshut</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
 
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a href="#pablo" class="nav-link">link</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#pablo" class="nav-link">link</a>
-                </li>
-            </ul> -->
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index-register.html"><img src="{% static 'images/logo.png' %}" alt="logo" /></a>
+      </div>
 
-
-
-
-            <!-- <form class="form-inline ml-auto">
-                <div class="form-group no-border">
-                  <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-white btn-just-icon btn-round">
-                    <i class="material-icons">search</i>
-                </button>
-            </form> -->
-              <!-- <form class="form-inline ml-auto">
-                  <input class="form-control" type="search" placeholder="Search" aria-label="Search" name='q'>
-                  <button class="btn btn-white btn-just-icon btn-round" type="submit">Search</button>
-                </form>
-        </div>
-        <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-Dropdown link
-</a>
-<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-<a class="dropdown-item" href="#">Action</a>
-<a class="dropdown-item" href="#">Another action</a>
-<a class="dropdown-item" href="#">Something else here</a>
-</div>
-</li>
-    </div>
-</nav> -->
-
-
-
- <nav class="navbar navbar-expand-lg bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="navbar-toggler-icon"></span>
-    <span class="navbar-toggler-icon"></span>
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        {% if request.user.is_authenticated %}
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span>Hey {{ request.user|capfirst }}</span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Logout</a>
-            <a class="dropdown-item" href="{% url 'posts:post_create' %}">Create Post</a>
-            <a class="dropdown-item" href="{% url 'accounts:profile' request.user %}">Profile</a>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right main-menu">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+            <ul class="dropdown-menu newsfeed-home">
+              <li><a href="index.html">Landing Page 1</a></li>
+              <li><a href="index-register.html">Landing Page 2</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+            <ul class="dropdown-menu newsfeed-home">
+              <li><a href="newsfeed.html">Newsfeed</a></li>
+              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
+              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a href="newsfeed-messages.html">Chatroom</a></li>
+              <li><a href="newsfeed-images.html">Images</a></li>
+              <li><a href="newsfeed-videos.html">Videos</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+            <ul class="dropdown-menu login">
+              <li><a href="timeline.html">Timeline</a></li>
+              <li><a href="timeline-about.html">Timeline About</a></li>
+              <li><a href="timeline-album.html">Timeline Album</a></li>
+              <li><a href="timeline-friends.html">Timeline Friends</a></li>
+              <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
+              <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
+              <li><a href="edit-profile-interests.html">Edit: Interests</a></li>
+              <li><a href="edit-profile-settings.html">Account Settings</a></li>
+              <li><a href="edit-profile-password.html">Change Password</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+            <ul class="dropdown-menu page-list">
+              <li><a href="index.html">Landing Page 1</a></li>
+              <li><a href="index-register.html">Landing Page 2</a></li>
+              <li><a href="newsfeed.html">Newsfeed</a></li>
+              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
+              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a href="newsfeed-messages.html">Chatroom</a></li>
+              <li><a href="newsfeed-images.html">Images</a></li>
+              <li><a href="newsfeed-videos.html">Videos</a></li>
+              <li><a href="timeline.html">Timeline</a></li>
+              <li><a href="timeline-about.html">Timeline About</a></li>
+              <li><a href="timeline-album.html">Timeline Album</a></li>
+              <li><a href="timeline-friends.html">Timeline Friends</a></li>
+              <li><a href="edit-profile-basic.html">Edit Profile</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="faq.html">FAQ Page</a></li>
+              <li><a href="404.html">404 Not Found</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="contact.html">Contact</a></li>
+        </ul>
+        <form class="navbar-form navbar-right hidden-sm">
+          <div class="form-group">
+            <i class="icon ion-android-search"></i>
+            <input type="text" class="form-control" placeholder="Search friends, photos, videos">
           </div>
-        </li>
-      </ul>
-      {% else %}
-      <li class="nav-item">
-        <a href="{% url 'accounts:user_login' %}" class="nav-link">Login</a>
-      </li>
-      {% endif %}
-    </div>
-    <form class="form-inline ml-auto">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search" name='q'>
-        <button class="btn btn-white btn-just-icon btn-round" type="submit">Search</button>
-      </form>
-  </div>
-</nav>
+        </form>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container -->
+  </nav>
+</header>
