--- a/templates/posts/newsfeed.html
+++ b/templates/posts/newsfeed.html
@@ -217,6 +217,52 @@
                     <p>. <i class="em em-anguished"></i> <i class="em em-anguished"></i> <i class="em em-anguished"></i></p>
                   </div>
                   <div class="line-divider"></div>
+									<div class="main-comment-section">
+									    <div class="container-fluid mt-2">
+									        <div class="form-group row">
+									            <form method="post">
+									                {% csrf_token %}
+									                <input type="hidden" name="comment_id" value="{{comment.id}}">
+									                {{comment_form.as_p}}
+									                {% if request.user.is_authenticated %}
+									                <input type="submit" value="Submit" class="btn btn-outline-success">
+									                {% else %}
+									                <input type="submit" value="Submit" class="btn btn-outline-success" disabled>
+									                {% endif %}
+									            </form>
+									        </div>
+									    </div>
+									    {{comments.count}} Comment{{comments|pluralize}}
+									    {% for comment in comments %}
+									    <blockquote class="blockquote">
+									    <p class="mb-0">{{comment.content}}</p>
+									        <footer class="blockquote-footer"><small>by <cite title="Source Title">{{comment.user|capfirst}}</cite></small>
+									        <button type="button" name="button" class="reply-btn btn btn-outline-dark btn-sm ml-2">Reply</button>
+									        </footer>
+									    </blockquote>
+
+									    <div class="replied-comments container mt-2" style="display:none;">
+									        {% for reply in comment.replies.all %}
+									            <blockquote class="blockquote">
+									            <p class="mb-0">{{reply.content}}</p>
+									                <footer class="blockquote-footer"><small>by <cite title="Source Title">{{reply.user|capfirst}}</cite></small></footer>
+									            </blockquote>
+									        {% endfor %}
+									        <div class="form-group row">
+									            <form method="post">
+									                {% csrf_token %}
+									                <input type="hidden" name="comment_id" value="{{comment.id}}">
+									                {{comment_form.as_p}}
+									                {% if request.user.is_authenticated %}
+									                <input type="submit" value="Submit" class="btn btn-outline-success">
+									                {% else %}
+									                <input type="submit" value="Submit" class="btn btn-outline-success" disabled>
+									                {% endif %}
+									                </form>
+									        </div>
+									    </div>
+									    {% endfor %}
+									</div>
                   <div class="post-comment">
                     <img src="http://placehold.it/300x300" alt="" class="profile-photo-sm" />
                     <p><a href="timeline.html" class="profile-link">Diana </a><i class="em em-laughing"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
