--- a/templates/posts/newsfeed.html
+++ b/templates/posts/newsfeed.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/emoji.css' %}" >
 		<link rel="stylesheet" href="{% static 'css/mediapost.css' %}" >
+		<link rel="stylesheet" href="{% static 'css/head.css' %}" >
+
 
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet">
