--- a/templates/posts/newsfeed.html
+++ b/templates/posts/newsfeed.html
@@ -47,16 +47,30 @@
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
+					<form class="navbar-form navbar-right hidden-sm">
+						<div class="form-group">
+							<i class="icon ion-android-search"></i>
+							<input type="text" class="form-control" placeholder="Search friends, photos, videos">
+						</div>
+					</form>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right main-menu">
+							<li class="dropdown"><a href="{% url 'posts:post_create' %}">Home</a></li>
+							{% if request.user.is_authenticated %}
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+                <a href="{% url 'posts:post_list' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
                 <ul class="dropdown-menu newsfeed-home">
                   <li><a href="index.html">Landing Page 1</a></li>
-                  <li><a href="index-register.html">Landing Page 2</a></li>
+                 <li><a href="index-register.html">Landing Page 2</a></li>
+								 {% else %}
+								 <!-- <input type="submit" value="Create" class="btn btn-primary pull-right"> -->
+
+								 <li class="btn btn-primary pull-right"><a href="{% url 'posts:post_create' %}">signup</a></li>
+{% endif %}
+
                 </ul>
               </li>
-              <li class="dropdown">
+              <!-- <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
                 <ul class="dropdown-menu newsfeed-home">
                   <li><a href="newsfeed.html">Newsfeed</a></li>
@@ -97,19 +111,13 @@
                   <li><a href="timeline-album.html">Timeline Album</a></li>
                   <li><a href="timeline-friends.html">Timeline Friends</a></li>
                   <li><a href="edit-profile-basic.html">Edit Profile</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="post_list">c</a></li>
                   <li><a href="faq.html">FAQ Page</a></li>
                   <li><a href="404.html">404 Not Found</a></li>
                 </ul>
-              </li>
-              <li class="dropdown"><a href="contact.html">Contact</a></li>
-            </ul>
-            <form class="navbar-form navbar-right hidden-sm">
-              <div class="form-group">
-                <i class="icon ion-android-search"></i>
-                <input type="text" class="form-control" placeholder="Search friends, photos, videos">
-              </div>
-            </form>
+              </li> -->
+            <!-- </ul> -->
+
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
       </nav>
@@ -128,15 +136,16 @@
             	<h5><a href="timeline.html" class="text-white">{{ user.username }}</a></h5>
             	<a href="#" class="text-white"><i class="ion ion-android-person-add"></i> 1,299 followers</a>
             </div><!--profile card ends-->
-            <ul class="nav-news-feed">
+            <!-- <ul class="nav-news-feed">
               <li><i class="icon ion-ios-paper"></i><div><a href="newsfeed.html">My Newsfeed</a></div></li>
               <li><i class="icon ion-ios-people"></i><div><a href="newsfeed-people-nearby.html">People Nearby</a></div></li>
               <li><i class="icon ion-ios-people-outline"></i><div><a href="newsfeed-friends.html">Friends</a></div></li>
               <li><i class="icon ion-chatboxes"></i><div><a href="newsfeed-messages.html">Messages</a></div></li>
               <li><i class="icon ion-images"></i><div><a href="newsfeed-images.html">Images</a></div></li>
               <li><i class="icon ion-ios-videocam"></i><div><a href="newsfeed-videos.html">Videos</a></div></li>
-            </ul><!--news-feed links ends-->
-            <div id="chat-block">
+            </ul>
+						<!--news-feed links ends--> -->
+            <!-- <div id="chat-block">
               <div class="title">Chat online</div>
               <ul class="online-users list-inline">
                 <li><a href="newsfeed-messages.html" title="Linda Lohan"><img src="http://placehold.it/300x300" alt="user" class="img-responsive profile-photo" /><span class="online-dot"></span></a></li>
@@ -149,7 +158,7 @@
                 <li><a href="newsfeed-messages.html" title="Anna Young"><img src="http://placehold.it/300x300" alt="user" class="img-responsive profile-photo" /><span class="online-dot"></span></a></li>
                 <li><a href="newsfeed-messages.html" title="Julia Cox"><img src="http://placehold.it/300x300" alt="user" class="img-responsive profile-photo" /><span class="online-dot"></span></a></li>
               </ul>
-            </div><!--chat block ends-->
+            </div><!--chat block ends--> -->
           </div>
 
 					<div class="col-md-7">
@@ -158,6 +167,9 @@
             ================================================= -->
             <div class="create-post">
             	<div class="row">
+
+
+
             		<div class="col-md-7 col-sm-7">
 									<form method="post">
 										{% csrf_token %}
@@ -488,8 +500,8 @@
           </div>
 
           <!-- Newsfeed Common Side Bar Right
-          ================================================= -->
-    			<div class="col-md-2 static">
+          <!-- ================================================= -->
+    			<!-- <div class="col-md-2 static">
             <div class="suggestions" id="sticky-sidebar">
               <h4 class="grey">Who to Follow</h4>
               <div class="follow-user">
@@ -528,7 +540,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>  -->
     		</div>
     	</div>
     </div>
