--- a/templates/posts/newsfeed.html
+++ b/templates/posts/newsfeed.html
@@ -58,14 +58,16 @@
 							<li class="dropdown"><a href="{% url 'posts:post_create' %}">Home</a></li>
 							{% if request.user.is_authenticated %}
               <li class="dropdown">
-                <a href="{% url 'posts:post_list' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+                <a href="{% url 'posts:post_list' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hey {{ request.user|capfirst }} <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
                 <ul class="dropdown-menu newsfeed-home">
-                  <li><a href="index.html">Landing Page 1</a></li>
-                 <li><a href="index-register.html">Landing Page 2</a></li>
+								</li><a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Logout</a>
+
+                  <!-- <li><a href="index.html">Landing Page 1</a></li> -->
+                 <!-- <li><a href="index-register.html">Landing Page 2</a></li> -->
 								 {% else %}
 								 <!-- <input type="submit" value="Create" class="btn btn-primary pull-right"> -->
 
-								 <li class="btn btn-primary pull-right"><a href="{% url 'posts:post_create' %}">signup</a></li>
+								 <li class="btn btn-primary pull-right"><a href="{% url 'accounts:user_login' %}">signup</a></li>
 
 {% endif %}
 
@@ -139,7 +141,7 @@
             <div class="profile-card">
             	<img src="http://placehold.it/300x300" alt="user" class="profile-photo" />
             	<h5><a href="timeline.html" class="text-white">{{ user.username }}</a></h5>
-            	<a href="#" class="text-white"><i class="ion ion-android-person-add"></i> 1,299 followers</a>
+            	<a href="#" class="text-white"><i class="ion ion-android-person-add"></i> followers:0</a>
             </div>
 						{% else %}
 {% endif %}
@@ -152,7 +154,7 @@
               <li><i class="icon ion-images"></i><div><a href="newsfeed-images.html">Images</a></div></li>
               <li><i class="icon ion-ios-videocam"></i><div><a href="newsfeed-videos.html">Videos</a></div></li>
             </ul>
-						<!--news-feed links ends--> 
+						<!--news-feed links ends-->
             <!-- <div id="chat-block">
               <div class="title">Chat online</div>
               <ul class="online-users list-inline">
