--- a/templates/posts/login.html
+++ b/templates/posts/login.html
@@ -104,7 +104,7 @@
                 <!--Registration Form Contents-->
                 <div class="tab-content">
                   <div class="tab-pane active" id="register">
-                    <form method="post">
+                    <!-- <form method="post">
                       {% csrf_token %}
 
                       <div class="title_text">Let's get start</div>
@@ -141,7 +141,7 @@
 
                       <input type="submit" value="Login" class="btn btn-outline-success">
 
-                    </form>
+                    </form> -->
                     <!-- <form method="post">
     {% csrf_token %}
     {{form.as_p}}
